fix envireonment issues

--- a/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
+++ b/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
@@ -152,7 +152,7 @@
                          [ngModel]="dep.userId"
                          #userId="ngModel">
                   <div class="row">
-                      <div class="col-md-6">
+                      <div class="col-md-12">
                           <div class="form-group" [ngClass]="(firstName.invalid && firstName.touched) ? 'has-error': ''">
                               <label class="control-label" for="firstName">First Name
                                   <i *ngIf="firstName.invalid && firstName.touched" class="fa fa-times-circle-o"></i>
@@ -169,7 +169,9 @@
                               <span *ngIf="firstName.invalid && firstName.touched" class="help-block">Your First Name is Required !</span>
                           </div>
                       </div>
-                      <div class="col-md-6">
+                  </div>
+                <div class="row">
+                      <div class="col-md-12">
                           <div class="form-group" [ngClass]="(lastName.invalid && lastName.touched) ? 'has-error': ''">
                               <label class="control-label" for="lastName">Last Name
                                   <i *ngIf="lastName.invalid && lastName.touched" class="fa fa-times-circle-o"></i>
@@ -189,7 +191,7 @@
                       </div>
                   </div>
                   <div class="row">
-                      <div class="col-md-6">
+                      <div class="col-md-12">
                           <div class="form-group" [ngClass]="(email.invalid && email.touched) ? 'has-error': ''">
                               <label class="control-label input-label-toggel" for="email">Email
                                   <i *ngIf="email.invalid && email.touched" class="fa fa-times-circle-o"></i>
@@ -207,7 +209,7 @@
                               <div class="row filterSubmit">
                                   <label class="switch">
                                       <input type="checkbox" name="isEmailNotification" [(ngModel)]="agent.isemailNotification" [checked]="isemailNotification">
-                                      <span class="slider"></span>
+                                      <span class="sliderEmail"></span>
                                   </label>
                               </div>
 
@@ -217,7 +219,9 @@
                                     class="help-block">Your Email Address is Required!</span>
                           </div>
                         </div>
-                          <div class="col-md-6">
+                  </div>
+                <div class="row">
+                          <div class="col-md-12">
                               <div class="form-group" [ngClass]="(phone.invalid && phone.touched) ? 'has-error': ''">
                                   <label class="control-label input-label-toggel" for="phone">Phone
                                       <i *ngIf="phone.invalid && phone.touched" class="fa fa-times-circle-o"></i>
@@ -236,7 +240,7 @@
                                   <div class="row filterSubmit">
                                       <label class="switch">
                                           <input type="checkbox" name="isPhoneNotification" [(ngModel)]="agent.isPhoneNotification" [checked]="isPhoneNotification">
-                                          <span class="slider"></span>
+                                          <span class="sliderPhone"></span>
                                       </label>
                                   </div>
                                   <span *ngIf="phone.invalid && phone.touched"
