--- a/src/app/core/layout/inner-pages/department/create-department/create-department.component.css
+++ b/src/app/core/layout/inner-pages/department/create-department/create-department.component.css
@@ -52,98 +52,175 @@
 /* toggle switch  */
 
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 87px;
-    height: 34px;
+  position: relative;
+  display: inline-block;
+  width: 220px;
+  height: 34px;
 }
 
 .switch input {display:none;}
 
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
+.sliderEmail {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
 }
 
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 29px;
-    width: 26px;
-    left: 1px;
-    bottom: 2px;
-    background-color: white;
-    transition: .4s;
+.sliderEmail:before {
+  position: absolute;
+  content: "";
+  height: 29px;
+  width: 26px;
+  left: 2px;
+  bottom: 2px;
+  background-color: white;
+  transition: .4s;
 }
 
-input:checked + .slider {
-    background-color: #2196F3;
+.sliderPhone {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
 }
 
-input:focus + .slider {
-    box-shadow: 0 0 1px #2196F3;
+.sliderPhone:before {
+  position: absolute;
+  content: "";
+  height: 29px;
+  width: 26px;
+  left: 1px;
+  bottom: 2px;
+  background-color: white;
+  transition: .4s;
 }
 
-input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-    left: 32px;
+
+input:checked + .sliderEmail {
+  background-color: #2196F3;
 }
+
+input:focus + .sliderEmail {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .sliderPhone {
+  background-color: #2196F3;
+}
+
+input:focus + .sliderPhone {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .sliderEmail:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+  left: 10px;
+}
+
+input:checked + .sliderPhone:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+  left: 10px;
+}
+
 
 .filterSubmit {
-    /*position: relative;*/
-    z-index: 1;
-    left: 0px;
-    top: 0px;
+  /*position: relative;*/
+  z-index: 1;
+  left: 0px;
+  top: 0px;
 }
 .input-box-toggel {
-    float: left;
-    width: calc(100% - 84px);
+  float: left;
+  width: calc(100% - 222px);
 }
 .input-label-toggel {
-    width: 100% !important;
+  width: 100% !important;
 }
 
-.slider:after
+.sliderEmail:after
 {
-    content:'OFF';
-    color: white;
-    display: block;
-    position: absolute;
-    transform: translate(-50%,-50%);
-    top: 50%;
-    left: 70%;
-    font-size: 15px;
-    font-family: Verdana, sans-serif;
+  content:'Email Notification Off';
+  color: white;
+  display: block;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  top: 50%;
+  left: 64%;
+  font-size: 12px;
+  font-family: Verdana, sans-serif;
+  width: 70%;
+  text-align: left;
 }
 
-input:checked + .slider:after
+input:checked + .sliderEmail:after
 {
-    content:'ON';
-    left: 30% !important;
+  content:'Email Notification On';
+  left: 65% !important;
 }
 
+.sliderPhone:after
+{
+  content:'SMS Notification Off';
+  color: white;
+  display: block;
+  position: absolute;
+  transform: translate(-50%,-50%);
+  top: 50%;
+  left: 64%;
+  font-size: 12px;
+  font-family: Verdana, sans-serif;
+  width: 70%;
+  text-align: left;
+}
+
+input:checked + .sliderPhone:after
+{
+  content:'SMS Notification On';
+  left: 65% !important;
+}
+
+@media screen and (max-width: 481px) {
+  .input-box-toggel{
+    width: 100%;
+  }
+  .switch{
+    margin: 10px 15px 0 0;
+    float: right;
+  }
+}
 .newbutton{
   height: 46px;
   margin-top: -4px;
   font-size: 18px;
 }
 
-@media only screen and (max-width: 1716px) and (min-width: 768px) {
-  .createAgentBtn {
-    width: 100% !important;
+@media only screen and (max-width: 1716px) and (min-width: 768px){
+  .createAgentBtn{
+    width:100% !important;
   }
 }
-@media screen and (max-width: 479px){
-    .depaertArea{
-        width: 100%;
-    }
+
+@media screen and (max-width: 767px){
+  .depaertArea{
+    width: 100%;
+  }
+  .createAgentBtn button{
+    margin-top: 0 !important;
+    margin-bottom: 15px;
+  }
 }
