--- a/src/app/core/layout/inner-pages/chats/agent-rejected/agent-rejected.component.html
+++ b/src/app/core/layout/inner-pages/chats/agent-rejected/agent-rejected.component.html
@@ -60,12 +60,9 @@
                 </div>
               </div>
             </div>
-            <div class="row" *ngIf="!rejected">
+            <div class="row">
               <div class="box box-primary">
-                <div class="messageHeading">
-                  <h3>Message</h3>
-                </div>
-                <div class="box-body">
+                <div class="box-body"  *ngIf="!rejected">
                   <h4>No Rejected Chats at this moment!</h4>
                 </div>
               </div>
