add available for 24*7 button in widget create/edit section

--- a/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
@@ -278,6 +278,7 @@
                     <!--<div *ngFor="let data of limitArray" id="settings">-->
                     <!--<input type="checkbox" name="daysArray" [checked]="widget.daysArray.indexOf(data) > -1" (change)="onChangeDaysArray(data, $event.target.checked)"> {{data}}<br>-->
                     <!--</div>-->
+                    <button type="button" class="btn btn-md btn-primary" (click)="makeItAvailable()">Available for 24*7 </button>
                     <div class="table-striped">
                       <table class="table table-responsive timeTable">
                         <tr>
