--- a/src/app/core/auth/sign-in/sign-in.component.html
+++ b/src/app/core/auth/sign-in/sign-in.component.html
@@ -45,24 +45,21 @@
             Your password is required!
           </div>
         </div>
-
         <div class="row">
-          <div class="col-xs-4">
-            <!--<div class="checkbox icheck">-->
-              <!--<label>-->
-                <!--<input type="checkbox"> Remember Me-->
-              <!--</label>-->
-            <!--</div>-->
+          <div class="col-xs-12 padding-bottom">
+            <a [routerLink]="['/forgot-password']">I forgot my password</a><br>
           </div>
-          <div class="col-xs-4">
+        </div>
+        <div class="row">
+          <div class="col-xs-4 pull-left">
             <a class="btn btn-primary btn-block btn-flat" [routerLink]="['/sign-up']">
               Sign Up
             </a>
           </div>
           <!-- /.col -->
-          <div class="col-xs-4">
+          <div class="col-xs-4 pull-right">
             <button type="submit"
-                    class="btn btn-primary btn-block btn-flat"
+                    class="btn btn-success btn-block btn-flat"
                     [disabled]="form.invalid"
             >
               Sign In
@@ -81,7 +78,7 @@
       <!--</div>-->
       <!-- /.social-auth-links -->
 
-      <a [routerLink]="['/forgot-password']">I forgot my password</a><br>
+      <!--<a [routerLink]="['/forgot-password']">I forgot my password</a><br>-->
       <!--<a [routerLink]="['/sign-up']" class="text-center">Register a new membership</a>-->
 
     </div>
