--- a/src/app/core/layout/inner-pages/chats/agent-closed/agent-closed.component.html
+++ b/src/app/core/layout/inner-pages/chats/agent-closed/agent-closed.component.html
@@ -8,7 +8,7 @@
         <div class="box">
           <div class="col-xs-12">
             <div class="row">
-              <h2>
+              <h2 class="headerSearch">
                 <div class="pull-left">Search : <input [(ngModel)]="searchKeywords" placeholder="Agent name" (ngModelChange)="agentFilterKeyUp()" class="searchKeyword"></div>
               </h2>
 
