--- a/src/app/core/layout/inner-pages/chats/agent-live/agent-live.component.html
+++ b/src/app/core/layout/inner-pages/chats/agent-live/agent-live.component.html
@@ -8,11 +8,12 @@
         <div class="box">
           <div class="col-xs-12">
             <div class="row">
-              <h2>
+              <h2 class="headerSearch">
                 <div class="pull-left">Search : <input [(ngModel)]="searchKeywords" placeholder="Agent name" (ngModelChange)="agentFilterKeyUp()" class="searchKeyword"></div>
               </h2>
-
             </div>
+
+            <div style="clear: both;"></div>
 
             <div class="row" *ngIf="agentList !== undefined && agentList.length">
               <div class="col-lg-2 col-md-3 col-sm-3">
