--- a/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.html
@@ -153,6 +153,7 @@
                            required
                            [disabled]="editMode"
                            placeholder="email"
+                           pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$"
                     >
                     <div class="row filterSubmit">
                       <label class="switch">
@@ -160,11 +161,10 @@
                         <span class="sliderEmail"></span>
                       </label>
                     </div>
-
-                    <span *ngIf="email.invalid && email.touched && form.controls.email?.errors.email"
-                          class="help-block">Please Enter a Proper Email Address!</span>
                     <span *ngIf="email.invalid && email.touched && form.controls.email?.errors.required"
                           class="help-block">Your Email Address is Required!</span>
+                    <span *ngIf="email.invalid && email.touched && form.controls.email?.errors.pattern"
+                          class="help-block">Please Enter a Proper Email Address!</span>
                   </div>
                 </div>
                 <div class="col-md-6">
@@ -200,6 +200,8 @@
                            placeholder="phone"
                            [ngModel]="agent.phone"
                            name="phone"
+                           [minlength]="14"
+                            [maxlength]="14"
                            required
                            ngModel
                            #phone="ngModel"
@@ -210,8 +212,10 @@
                         <span class="sliderPhone"></span>
                       </label>
                     </div>
-                    <span *ngIf="phone.invalid && phone.touched"
+                    <span *ngIf="phone.invalid && phone.touched && form.controls.phone?.errors.required"
                           class="help-block">Your Phone Number is Required !</span>
+                    <span *ngIf="phone.invalid && phone.touched && ( form.controls.phone?.errors.minlength || form.controls.phone?.errors.maxlength )"
+                          class="help-block">Your Phone Number Should be always 10 digit!</span>
                   </div>
                 </div>
                 <div class="col-md-6">
