added validation for the widget v1.1

--- a/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
@@ -260,11 +260,9 @@
 
                 </div>
                 <div class="col-md-6">
-                  <div class="form-group" [ngClass]="limitSettingError ? 'has-error': ''">
+                  <div class="form-group">
                     <label class="control-label">
-                      <i *ngIf="limitSettingError" class="fa fa-times-circle-o"> </i>
                       Limit setting time & days </label>
-                    <span *ngIf="limitSettingError" class="help-block">Please select atlist one time limit </span>
                     <!--<div *ngFor="let data of limitArray" id="settings">-->
                     <!--<input type="checkbox" name="daysArray" [checked]="widget.daysArray.indexOf(data) > -1" (change)="onChangeDaysArray(data, $event.target.checked)"> {{data}}<br>-->
                     <!--</div>-->
@@ -774,7 +772,7 @@
               <div class="col-md-12">
                 <div class="box-footer">
                   <button
-                    type="button" [disabled]="form.invalid || ( (afterLoginState | async).widget.numbers.length == 0 && !editMode) || widget.userId === 0 || (widget.departmentIdArray !== undefined && widget.departmentIdArray.length == 0) || (widget.departmentIdArray !== undefined && widget.departmentIdArray.length == 0 && editMode) || limitSettingError"
+                    type="button" [disabled]="form.invalid || ( (afterLoginState | async).widget.numbers.length == 0 && !editMode) || widget.userId === 0 || (widget.departmentIdArray !== undefined && widget.departmentIdArray.length == 0) || (widget.departmentIdArray !== undefined && widget.departmentIdArray.length == 0 && editMode)"
                     class="btn btn-primary pull-right" (click)="onSubmit(form)">
                     <i *ngIf ="loader" class="fa fa-spinner fa-spin"></i>
                     Submit
