--- a/src/app/core/layout/inner-pages/chats/agent-closed/agent-closed.component.html
+++ b/src/app/core/layout/inner-pages/chats/agent-closed/agent-closed.component.html
@@ -39,7 +39,7 @@
                   <div class="chat-list chat-list2">
                     <ul *ngIf="agentList[agentIndex].chat !== undefined">
                       <ng-container
-                        *ngFor="let client of agentList[agentIndex]?.chat; let j = index;">
+                        *ngFor="let client of agentList[agentIndex]?.chat | orderBy; let j = index;">
                         <li [ngClass]="{ active : clientIndex == j}" (click)="changeClient(j)">
                           <div class="col-md-2">
                             <div class="chat-head row">
