--- a/src/app/core/layout/inner-pages/dashboard/dashboard.component.html
+++ b/src/app/core/layout/inner-pages/dashboard/dashboard.component.html
@@ -146,7 +146,7 @@
             <!-- /.box-header -->
             <div class="box-body">
               <ul class="products-list product-list-in-box">
-                  <ng-container   *ngFor="let contact of (chatState | async).ongoing; let i = index;">
+                  <ng-container   *ngFor="let contact of (chatState | async).ongoing | orderBy; let i = index;">
                 <li class="item" *ngIf="contact.status == 1 || contact.status == 6">
                   <div class="product-info">
                     <a href="javascript:void(0)" class="product-title">{{contact.client}}</a>
