Add no data found message in the lists v1.0

--- a/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
+++ b/src/app/core/layout/inner-pages/chats/contact-list/contact-list.component.html
@@ -33,6 +33,9 @@
                 <td>{{item['email']}}</td>
                 <td>{{item['phone']}}</td>
               </tr>
+                <tr  *ngIf="((chatState | async).contactList | filter : term).length == 0">
+                  <td> <strong>No data found !</strong></td>
+                </tr>
               </tbody>
             </table>
               <div class="row">
