--- a/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.html
@@ -91,6 +91,9 @@
                                                 </div>-->
                                             </td>
                                         </tr>
+                                        <tr  *ngIf="((afterLoginState | async).widget.list | filter : companySearch: term).length == 0">
+                                            <td> <strong>No data found !</strong></td>
+                                        </tr>
                                         </tbody>
                                     </table>
                                 </div>
