--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
@@ -106,6 +106,9 @@
                                                 </div>-->
                                             </td>
                                         </tr>
+                                        <tr  *ngIf="((afterLoginState | async).admin.list | filter : term).length == 0">
+                                            <td> <strong>No data found !</strong></td>
+                                        </tr>
                                         </tbody>
                                     </table>
                                     <div class="row">
