--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
@@ -100,6 +100,9 @@
                         </div>-->
                       </td>
                     </tr>
+                    <tr  *ngIf="(agentList | filter : companySearch: term).length == 0">
+                        <td> <strong>No data found !</strong></td>
+                    </tr>
                     </tbody>
                   </table>
                   <div class="row">
