--- a/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
@@ -69,6 +69,9 @@
                         </div>
                       </td>
                     </tr>
+                    <tr  *ngIf="((chatState | async).agentList | filter : term).length == 0">
+                      <td> <strong>No data found !</strong></td>
+                    </tr>
                     </tbody>
                   </table>
                   <div class="row">
