--- a/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
+++ b/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
@@ -63,6 +63,9 @@
                                                 </button>
                                             </td>
                                         </tr>
+                                        <tr  *ngIf="((afterLoginState | async).department.list | filter : companySearch: term).length == 0">
+                                            <td> <strong>No data found !</strong></td>
+                                        </tr>
                                         </tbody>
                                     </table>
                                     <div class="row">
